--- a/vivacity-backend/package.json
+++ b/vivacity-backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc && node ./dist/index.js"
+    "dev": "tsc && node ./dist/index.js",
+    "start": "tsc && node ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
   "dependencies": {
     "@types/node": "^20.8.10",
     "@vercel/postgres": "^0.5.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
